--- a/src/main/resources/templates/contrato_index.html
+++ b/src/main/resources/templates/contrato_index.html
@@ -3,82 +3,83 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>Alquiler de Vehiculos - CONTRATO</title>
+    <title>Alquiler de Vehiculos - CONTRATO</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
-    rel="stylesheet">
+    <!-- Custom fonts for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
+          rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="/css/one-page-wonder.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/css/one-page-wonder.min.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home Empleado - Ventas</a>
-
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/reserva/">Reserva</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/">salir</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <section>
-    <div class="container" style="padding-top: 100px">
-      <div class="row align-items-center">
-        <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h2 class="display-4">FORMALIZAR EL CONTRATO</h2>
-            <form action="/contrato/generar_contrato/" method="GET">
-              <input type="hidden" name="ide" th:value="${empleadoLog.id}">
-              <label>NÚMERO DE RESERVA</label>
-              <input type="number" class="form-control" name="idres"/>
-              <br/>
-              <label>ID Empleado</label>
-              <input type="text" class="form-control" name="ide" th:value="${empleadoLog.id}"/>
-              <br/><button type="submit" class="btn btn-primary">Ingresar</button>
-            </form>
-          </div>
+        <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home
+            Empleado - Ventas</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/reserva/">Reserva</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">salir</a>
+                </li>
+            </ul>
         </div>
-      </div>
-  </section>
+    </div>
+</nav>
+<section>
+    <div class="container" style="padding-top: 100px">
+        <div class="row align-items-center">
+            <div class="col-lg-6 order-lg-1">
+                <div class="p-5">
+                    <h2 class="display-4">FORMALIZAR EL CONTRATO</h2>
+                    <form action="/contrato/generar_contrato/" method="GET">
+                        <input type="hidden" name="ide" th:value="${empleadoLog.id}">
+                        <label>NÚMERO DE RESERVA</label>
+                        <input type="number" class="form-control" name="idres"/>
+                        <br/>
+                        <label>ID Empleado</label>
+                        <input type="text" class="form-control" name="ide" th:value="${empleadoLog.id}"/>
+                        <br/>
+                        <button type="submit" class="btn btn-primary">Ingresar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
-  <!-- Footer -->
-  <footer class="py-5 bg-black">
+<!-- Footer -->
+<footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
+        <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
     </div>
     <!-- /.container -->
-  </footer>
+</footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
