--- a/src/main/resources/templates/exitoGeneral.html
+++ b/src/main/resources/templates/exitoGeneral.html
@@ -33,7 +33,6 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <!--            <a class="nav-link" href="/registro">Registro</a>-->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/">Salir</a>
@@ -48,7 +47,6 @@
         <div class="container">
             <h1 class="masthead-heading mb-0" th:text="${titulo1}"></h1>
             <h2 class="masthead-subheading mb-0" th:text="${titulo2}"></h2>
-<!--            <input type="hidden" name="idc" th:value="${clienteLog.id}">-->
         </div>
     </div>
 
@@ -64,6 +62,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 
