--- a/src/main/resources/templates/exito_reserva.html
+++ b/src/main/resources/templates/exito_reserva.html
@@ -70,6 +70,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 
@@ -78,7 +79,6 @@
     <div class="container">
         <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
     </div>
-    <!-- /.container -->
 </footer>
 
 <!-- Bootstrap core JavaScript -->
