--- a/src/main/resources/templates/new_empleado1.html
+++ b/src/main/resources/templates/new_empleado1.html
@@ -42,9 +42,7 @@
 <section>
     <div class="container" style="padding-top: 80px">
         <div class="mx-auto">
-        <div class="align-items-center">
-<!--        <div class="row align-items-center">-->
-<!--            <div class="col-lg-10 order-lg-1">-->
+            <div class="align-items-center">
                 <div class="p-5">
                     <h2 class="display-8">INGRESE EL DNI DEL NUEVO EMPLEADO</h2>
                     <form class="col-lg-4 " action="/empleado/new_empleado_2/" method="GET">
@@ -53,17 +51,18 @@
                         <input type="text" class="form-control" name="dni"/><br/>
                         <button type="submit" class="btn btn-primary">Siguiente</button>
                     </form>
-<!--                </div>-->
+                </div>
             </div>
         </div>
         <div class="col-lg-10 order-lg-1">
             <div class="p-5">
-                <h2> </h2>
+                <h2></h2>
                 <br/>
                 <br/>
                 <h1 text="" class="display-4"></h1>
             </div>
         </div>
+    </div>
 </section>
 
 <!-- Footer -->
