--- a/src/main/resources/templates/reserva.html
+++ b/src/main/resources/templates/reserva.html
@@ -58,7 +58,8 @@
                         <label>Nombre</label>
                         <input type="text" class="form-control mayus" name="nombre" th:value="${clienteLog.nombre}"/>
                         <label>Apellido</label>
-                        <input type="text" class="form-control mayus" name="apellido" th:value="${clienteLog.apellido}"/>
+                        <input type="text" class="form-control mayus" name="apellido"
+                               th:value="${clienteLog.apellido}"/>
                         <label>DNI</label>
                         <input type="text" class="form-control" name="dni" th:value="${clienteLog.dni}"/>
                         <label>Edad</label>
@@ -66,7 +67,8 @@
                         <label>Telefono</label>
                         <input type="text" class="form-control" name="telefono" th:value="${clienteLog.telefono}"/>
                         <label>Direccion</label>
-                        <input type="text" class="form-control mayus" name="direccion" th:value="${clienteLog.direccion}"/>
+                        <input type="text" class="form-control mayus" name="direccion"
+                               th:value="${clienteLog.direccion}"/>
                         <label>E-Mail</label>
                         <input type="email" class="form-control" name="email" th:value="${clienteLog.mail}"/><br>
 
@@ -81,9 +83,11 @@
                         <label>Modelo</label>
                         <input type="text" class="form-control mayustt" name="modelo" th:value="${vehiculo.modelo}"/>
                         <label>Tipo Vehiculo</label>
-                        <input type="text" class="form-control mayus" name="tipoVehiculo" th:value="${vehiculo.tipoVehiculo}"/>
+                        <input type="text" class="form-control mayus" name="tipoVehiculo"
+                               th:value="${vehiculo.tipoVehiculo}"/>
                         <label>Tipo Gama</label>
-                        <input type="text" class="form-control mayus" name="typeGama" th:value="${vehiculo.typeGama}"/><br>
+                        <input type="text" class="form-control mayus" name="typeGama"
+                               th:value="${vehiculo.typeGama}"/><br>
                         <label>Precio Diario</label>
                         <input type="text" class="form-control" name="precio" th:value="${vehiculo.precio}"/><br>
 
