--- a/src/main/resources/templates/reserva_empleado.html
+++ b/src/main/resources/templates/reserva_empleado.html
@@ -22,7 +22,8 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home Empleado - Ventas</a>
+        <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home
+            Empleado - Ventas</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,10 +31,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" th:href="@{/reserva/hreservas(id=${clienteLog.id})}">Historial</a>-->
-
-<!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="/">Salir</a>
                 </li>
@@ -60,7 +57,8 @@
                         <label>Nombre</label>
                         <input type="text" class="form-control mayus" name="nombre" th:value="${clienteLog.nombre}"/>
                         <label>Apellido</label>
-                        <input type="text" class="form-control mayus" name="apellido" th:value="${clienteLog.apellido}"/>
+                        <input type="text" class="form-control mayus" name="apellido"
+                               th:value="${clienteLog.apellido}"/>
                         <label>DNI</label>
                         <input type="text" class="form-control" name="dni" th:value="${clienteLog.dni}"/>
                         <label>Edad</label>
@@ -68,7 +66,8 @@
                         <label>Telefono</label>
                         <input type="text" class="form-control" name="telefono" th:value="${clienteLog.telefono}"/>
                         <label>Direccion</label>
-                        <input type="text" class="form-control mayus" name="direccion" th:value="${clienteLog.direccion}"/>
+                        <input type="text" class="form-control mayus" name="direccion"
+                               th:value="${clienteLog.direccion}"/>
                         <label>E-Mail</label>
                         <input type="email" class="form-control" name="email" th:value="${clienteLog.mail}"/><br>
 
@@ -83,9 +82,11 @@
                         <label>Modelo</label>
                         <input type="text" class="form-control mayustt" name="modelo" th:value="${vehiculo.modelo}"/>
                         <label>Tipo Vehiculo</label>
-                        <input type="text" class="form-control mayus" name="tipoVehiculo" th:value="${vehiculo.tipoVehiculo}"/>
+                        <input type="text" class="form-control mayus" name="tipoVehiculo"
+                               th:value="${vehiculo.tipoVehiculo}"/>
                         <label>Tipo Gama</label>
-                        <input type="text" class="form-control mayus" name="typeGama" th:value="${vehiculo.typeGama}"/><br>
+                        <input type="text" class="form-control mayus" name="typeGama"
+                               th:value="${vehiculo.typeGama}"/><br>
                         <label>Precio Diario</label>
                         <input type="text" class="form-control" name="precio" th:value="${vehiculo.precio}"/><br>
                         <!--                DATOS RESERVA     -->
@@ -93,7 +94,8 @@
                         <label>Fecha de Retiro</label>
                         <input ttype="text" class="form-control mayus" name="fRetiro" th:value="${fRetiro}"/><br>
                         <label>Fecha de Devolución</label>
-                        <input type="text" class="form-control mayus" name="fDevolucion" th:value="${fDevolucion}"/><br/>
+                        <input type="text" class="form-control mayus" name="fDevolucion"
+                               th:value="${fDevolucion}"/><br/>
                         <label>Total a Pagar</label>
                         <input type="text" class="form-control" name="total" th:value="${total}"/><br/>
                         <br/>
