--- a/src/main/resources/templates/empleado.html
+++ b/src/main/resources/templates/empleado.html
@@ -3,121 +3,106 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>Mostrar Empleados</title>
+    <title>Mostrar Empleados</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
-    rel="stylesheet">
+    <!-- Custom fonts for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
+          rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="/css/one-page-wonder.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/css/one-page-wonder.min.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="/">Alquiler de Vehiculos</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/registro">Registro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Log In</a>
-          </li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="/">Alquiler de Vehiculos</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/registro">Registro</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Log In</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
-  <header class="masthead text-center text-white">
+<header class="masthead text-center text-white">
     <div class="masthead-content">
-      <div class="container">
-        <h1 class="masthead-heading mb-0">Alquiler de Vehiculos</h1>
-        <h2 class="masthead-subheading mb-0">Mostrar empleados.</h2>
-<!--        <a href="/registro" class="btn btn-primary btn-xl rounded-pill mt-5">¡mostrar empleados!</a>-->
-      </div>
+        <div class="container">
+            <h1 class="masthead-heading mb-0">Alquiler de Vehiculos</h1>
+            <h2 class="masthead-subheading mb-0">Mostrar empleados.</h2>
+        </div>
     </div>
     <div class="bg-circle-1 bg-circle"></div>
     <div class="bg-circle-2 bg-circle"></div>
     <div class="bg-circle-3 bg-circle"></div>
     <div class="bg-circle-4 bg-circle"></div>
-  </header>
+</header>
 
-  <section>
+<section>
     <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 order-lg-2">
-          <div class="p-5">
-            <img class="img-fluid rounded-circle" src="" alt="">
-          </div>
+        <div class="row align-items-center">
+            <div class="col-lg-6 order-lg-2">
+                <div class="p-5">
+                    <img class="img-fluid rounded-circle" src="" alt="">
+                </div>
+            </div>
+            <div class="col-lg-6 order-lg-1">
+                <div class="p-5">
+                    <h2 class="display-4">mostrar todos</h2>
+                    <form action="/empleado/mostrar" method="POST">
+                        <label>Nombre</label>
+                        <input type="text" class="form-control" name="nombre" th:value="${nombre}"/>
+
+                        <label>Apellido</label>
+                        <input type="text" class="form-control" name="apellido" th:value="${apellido}"/>
+
+                        <label>E-Mail</label>
+                        <input type="email" class="form-control" name="email" th:value="${email}"/>
+
+                        <label>Clave</label>
+                        <input type="password" class="form-control" name="clave1" th:value="${clave1}"/>
+                        <tr>
+                            <th> NAME</th>
+                        </tr>
+                        <br/>
+                        <button type="submit" class="btn btn-primary">Registrarme</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-6 order-lg-1">
-          <div class="p-5">
-            <h2 class="display-4">mostrar todos</h2>
-            <form action="/empleado/mostrar" method="POST" >
-
-<!--              &lt;!&ndash; Este p utiliza una etiqueta de Thymeleaf que preguntará si la variable 'error' no se encuentra null.-->
-<!--              Si contiene algún valor, lo introduce dentro de la etiqueta <p> y le aplica el style in-line &ndash;&gt;-->
-<!--              <p th:if="${error != null}" th:text="${error}" style="color:red;"></p>-->
-
-              <label>Nombre</label>
-              <input type="text" class="form-control" name="nombre" th:value="${nombre}" />
-
-              <label>Apellido</label>
-              <input type="text" class="form-control" name="apellido" th:value="${apellido}" />
-
-              <label>E-Mail</label>
-              <input type="email" class="form-control" name="email" th:value="${email}" />
-
-              <label>Clave</label>
-              <input type="password" class="form-control" name="clave1" th:value="${clave1}" />
-
-              <tr>
-                <th> NAME</th>
-
-              </tr>
-<!--              <tr th:each="empleados:${listEmpleados}" ></tr>-->
-<!--              <td th:text="${empleado.nombre}" ></td>-->
-
-              <br /><button type="submit" class="btn btn-primary">Registrarme</button>
-            </form>
-
-          </div>
-        </div>
-      </div>
     </div>
-  </section>
-
-
-  <!-- Footer -->
-  <footer class="py-5 bg-black">
+</section>
+<!-- Footer -->
+<footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2022</p>
+        <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2022</p>
     </div>
     <!-- /.container -->
-  </footer>
+</footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+<!-- Bootstrap core JavaScript -->
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
