--- a/src/main/resources/templates/exito_contrato.html
+++ b/src/main/resources/templates/exito_contrato.html
@@ -3,87 +3,84 @@
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>Alquiler de Vehiculos - EXITO</title>
+    <title>Alquiler de Vehiculos - EXITO</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <!-- Custom fonts for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
+          rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="/css/one-page-wonder.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/css/one-page-wonder.min.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
         <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home
             Empleado - Ventas</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-              <a class="nav-link" href="/">Salir</a>
-          </li>
-          <li class="nav-item">
-<!--            <a class="nav-link" href="/login">Log In</a>-->
-          </li>
-        </ul>
-      </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Salir</a>
+                </li>
+                <li class="nav-item">
+                </li>
+            </ul>
+        </div>
     </div>
-  </nav>
+</nav>
 
-  <header class="masthead text-center text-white">
+<header class="masthead text-center text-white">
     <div class="masthead-content">
-      <div class="container">
-        <h2 class="masthead-subheading mb-0">EL CONTRATO ESTA REGISTRADO.</h2>
-<!--        <a href="/#" class="btn btn-primary btn-xl rounded-pill mt-5">¡Registrate!</a>-->
-      </div>
+        <div class="container">
+            <h2 class="masthead-subheading mb-0">EL CONTRATO ESTA REGISTRADO.</h2>
+        </div>
     </div>
 
-  </header>
+</header>
 
-  <section>
-      <div class="container">
-          <div class="row align-items-center">
-              <div class="col-lg-6 order-lg-2">
-                  <div class="p-5">
-                  </div>
-              </div>
-              <div class="col-lg-10 order-lg-1">
-                  <div class="p-3">
-                      <h1 class="masthead-subheading mb-0" th:text="' EL NUMERO DE CONTRATO ES EL: '+${id_contrato}"></h1>
-                  </div>
-              </div>
-          </div>
-  </section>
-
-
-
-  <!-- Footer -->
-  <footer class="py-5 bg-black">
+<section>
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
+        <div class="row align-items-center">
+            <div class="col-lg-6 order-lg-2">
+                <div class="p-5">
+                </div>
+            </div>
+            <div class="col-lg-10 order-lg-1">
+                <div class="p-3">
+                    <h1 class="masthead-subheading mb-0" th:text="' EL NUMERO DE CONTRATO ES EL: '+${id_contrato}"></h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Footer -->
+<footer class="py-5 bg-black">
+    <div class="container">
+        <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p>
     </div>
     <!-- /.container -->
-  </footer>
+</footer>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
-
 </html>
