--- a/src/main/resources/templates/index_ventas.html
+++ b/src/main/resources/templates/index_ventas.html
@@ -24,7 +24,8 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home Empleado - Ventas</a>
+        <a class="navbar-brand" th:href="@{/empleado/ventas/(correo=${empleadoLog.mail})}">Alquiler de Vehículos - Home
+            Empleado - Ventas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,14 +41,16 @@
     </div>
 </nav>
 <header class="masthead text-center text-white">
-    <div class="list-crear_mascota-btn" style="padding-top: 30px" >
+    <div class="list-crear_mascota-btn" style="padding-top: 30px">
         <div class="container">
             <h1 class="masthead-heading mb-0 mayustt" th:text="'nombre: '+${empleadoLog.nombre}"></h1>
             <h1 class="masthead-heading mb-0 mayustt" th:text="'Apellido: '+${empleadoLog.apellido}"></h1>
             <h1 class="masthead-heading mb-0" th:text="'Número de Empleado: '+${empleadoLog.id}"></h1>
         </div>
-        <a th:href="@{/contrato/(ide=${empleadoLog.id})}" class="btn btn-primary btn-xl rounded-pill mt-115 ">Realizar Contrato</a>
-        <a th:href="@{/reserva/(ide=${empleadoLog.id})}" class="btn btn-primary btn-xl rounded-pill mt-115 ">Hacer Reserva</a>
+        <a th:href="@{/contrato/(ide=${empleadoLog.id})}" class="btn btn-primary btn-xl rounded-pill mt-115 ">Realizar
+            Contrato</a>
+        <a th:href="@{/reserva/(ide=${empleadoLog.id})}" class="btn btn-primary btn-xl rounded-pill mt-115 ">Hacer
+            Reserva</a>
     </div>
 </header>
 
