--- a/src/main/resources/templates/reserva_de_empleado.html
+++ b/src/main/resources/templates/reserva_de_empleado.html
@@ -45,9 +45,7 @@
 <section>
     <div class="container" style="padding-top: 100px">
         <div class="mx-auto">
-        <div class="align-items-center">
-<!--        <div class="row align-items-center">-->
-<!--            <div class="col-lg-10 order-lg-1">-->
+            <div class="align-items-center">
                 <div class="p-5">
                     <h2 class="display-8">COMPLETE LOS DATOS REQUERIDOS</h2>
                     <form class="col-lg-4 " action="/reserva/resEmp/" method="GET">
@@ -60,17 +58,18 @@
                         <input type="Date" class="form-control" name="fDevolucion"/><br/>
                         <button type="submit" class="btn btn-primary">Ingresar</button>
                     </form>
-<!--                </div>-->
+                </div>
             </div>
         </div>
         <div class="col-lg-10 order-lg-1">
             <div class="p-5">
-                <h2> </h2>
+                <h2></h2>
                 <br/>
                 <br/>
                 <h1 text="" class="display-4"></h1>
             </div>
         </div>
+    </div>
 </section>
 
 <!-- Footer -->
